tests/simd/errors/f32c4.expected
File "f32c4.ml", line 1:
Error: Did not find constant float arguments for caml_float32x4_const4
